# src/main/resources/swagger/MS-Address-API.yaml
@@ -63,6 +63,67 @@ paths:
           description: Internal server error
         '503':
           description: Service unavailable
+
+    put:
+      tags:
+        - Address
+      summary: Update Address
+      description: Update an existing address.
+      operationId: updateAddress
+      parameters:
+        - name: addressId
+          in: query
+          description: ID of the address to be updated
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AddressRequest'
+      responses:
+        '200':
+          description: Address updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AddressResponse'
+        '400':
+          description: Invalid request body or parameters
+        '404':
+          description: Address not found
+        '500':
+          description: Internal server error
+        '503':
+          description: Service unavailable
+
+    delete:
+      tags:
+        - Address
+      summary: Delete Address
+      description: Delete an existing address.
+      operationId: deleteAddress
+      parameters:
+        - name: addressId
+          in: query
+          description: ID of the address to be deleted
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Address deleted successfully
+        '400':
+          description: Invalid parameters
+        '404':
+          description: Address not found
+        '500':
+          description: Internal server error
+        '503':
+          description: Service unavailable
+
 components:
   schemas:
     AddressRequest:
@@ -121,5 +182,4 @@ components:
       properties:
         id:
           type: string
-          description: Unique identifier for the address
-          example: abc123
+          description: Unique
